--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,9 @@ android {
         targetSdk 32
         versionCode 1
         versionName "1.0"
-
+        ndk {
+            abiFilters 'arm64-v8a'
+        }
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -33,7 +35,6 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
@@ -42,9 +43,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     implementation 'com.google.android.exoplayer:exoplayer:2.17.1'
-    implementation 'com.google.code.gson:gson:2.8.9'
-
-    implementation 'com.akexorcist:localization:1.2.9'
 
     implementation 'com.arthenica:mobile-ffmpeg-min:4.4.LTS'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
